k8s/deploy.yaml
# microservices components 1 - front
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather
  name: weather-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-front
  template:
    metadata:
      labels:
        app: weather-front
    spec:
      containers:
        - image: brainupgrade/weather:latest
          imagePullPolicy: Always
          name: weather-front
          ports:
            - containerPort: 8080
